[package]
name = "md-to-pdf"
version = "0.1.0"
authors = ["spawnia <benedikt@franke.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
pulldown-cmark = { version = "0.7", default-features = false }
tempfile = "3"
log = "0.4.8"
