[package]
name = "md-to-pdf"
version = "0.1.0"
authors = ["spawnia <benedikt@franke.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
tempfile = "3"
log = "0.4.8"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["compression", "serve"]
